versioned_docs/version-4.0.3/安装/系统要求.md

import useBaseUrl from '@docusaurus/useBaseUrl';

本节提供安装imgenius企业移动现场作业管理软件的软硬件要求。

## 硬件要求

* 服务器组件：
  * im数据中心
  * im应用服务器
  * im企业运营中心
  * im内容服务器
  * im通知服务器
  * im文档服务器
* 要求：  
  * 处理器：2 GHz 或以上
  * 内存：至少 8GB 内存（对于较高的作业频次和数据量，建议更多的内存）
  * 硬盘空间：至少 50 GB 可用硬盘空间 （对于im数据中心，需要根据用户需要保存的数据量有所调整）

* 客户端组件：
  * im解决方案开发中心  
  * im系统管理中心
* 要求：  
  * 处理器：2 GHz 或以上
  * 内存：至少 4 GB 内存
  * 硬盘空间：至少 40 GB 可用硬盘空间

## 软件要求

* 操作系统兼容性如下:

| 操作系统  | 服务器组件 |客户端组件|
| --- | --- | -
| Microsoft Windows Server 2008 | 是 | 是 |
| Microsoft Winodws Server 2008 R2 | 是 | 是 |
| Microsoft Windows Server 2012 | 是 |  是 |
| Microsoft Windows Server 2012 R2 | 是 |  是 |
| Microsoft Windows Server 2016 | 是 |  是 |
| Microsoft Windows Server 2019 | 是 |  是 |
| Microsoft Windows 7 | 是  | 是 |
| Microsoft Windows 8 | 是  | 是 |
| Microsoft Windows 10 | 是  | 是 |

:::note 注释
请禁用用户帐户控制（UAC）功能，并重启计算机；系统支持32位和64位操作系统，在64位操作系统上将以32位模式运行。
:::note 注释

* 数据库和其它软件要求如下:

|  | im数据中心 | im企业运营中心 |im通知服务器 | im应用服务器 | im文件服务器 和 im内容服务器 |客户端组件 |
| --- | --- | --- |--- | --- | --- |--- |
| SQL Server 2008 及以上 或 [PostgreSQL](https://www.postgresql.org/) 10.0 及以上 | 是 |  |  |  |  |  |
| [Microsoft .Net Framework](https://www.microsoft.com/zh-CN/download/details.aspx?id=49982) 4.6.1及以上 |  | 是 | 是 | 是  | | 是|
| Interment 信息服务 7.0 及以上 |  | 是 |  |  |  |  |
| ASP.NET MVC 2.0 |  | 是 |  |  |  |  |
| [MongoDB](https://www.mongodb.com/) 3.0 及以上 | 是 |  |  |  | 是 |  |
| [RabbitMQ](https://www.rabbitmq.com/) 3.7.0 及以上 |  |  | 是 |  |  |  |

:::note 注释
PostgreSQL、MongoDB和RabbitMQ推荐安装最新稳定版本。
:::note 注释

## 浏览器要求

* im企业运营中心的客户端使用通用的Internet浏览器即可，支持版本为IE10.0及以上版本，也支持Chrome浏览器、火狐浏览器及360浏览器等。

## 缺省端口

* SQLServer：1433
* MongoDB：27017
* RabbitMQ
  * 服务：5672
  * 网页管理插件：15672
* imgenius 通知服务
  * 同步：8090
  * Web Socket（ws）：9091
  * Web Socket（wss）：9090
* imgenius 企业运营中心
  * http：80
  * https：443
* imgenius Restful API：8010
* imgenius WebService（不在维护）：8081、8082、8083、8084、8085
